make sure ">" doesn't get too small on large titles
SRFCMSAL-1138

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -65,6 +65,7 @@
 .collection__title-link-icon {
     margin-left: 4px;
     @include caret('red', 'right', 'medium');
+    flex: 0 0 24px;
 }
 
 .collection__lead {
